# mach

./: .gitattributes  .gitignore  .rgignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  claude-code-web-setup.sh  dune  dune-project  mach-lsp.opam  mach.install  mach.opam
.claude/: settings.json
.claude/commands/: pick-a-todo.md
.github/workflows/: main.yml
_bin/: cat_parsetree.ml  mach  mach-lsp  ocamlbundle
_dist/: Makefile  dune  mach.ml
_dist/bash-completion/completions/: mach
_dist/man1/: mach-build.1  mach-run.1  mach.1
_dist/zsh/site-functions/: _mach
docs/: Makefile  index.html  index.md  markdown_copy_code.ml  markdown_copy_code.mli  page.template.html  website.ml
example/: a.ml  b.ml  lib.ml  lib.mlx  main.ml
example/lib/: lib.mlx
lib/: dune  mach_config.ml  mach_config.mli  mach_error.ml  mach_lib.ml  mach_lib.mli  mach_library.ml  mach_library.mli  mach_log.ml  mach_log.mli  mach_module.ml  mach_module.mli  mach_ocaml_rules.ml  mach_state.ml  mach_state.mli  mach_std.ml  makefile.ml  makefile.mli  ninja.ml  ninja.mli  s.ml
ocamlbundle/: dune
plans/: add-mach-build-command.md  build-deps-in-build-dirs.md  build-dir-option.md  build-with-makefile.md  environment-configuration.md  error-output-overhaul.md  error-reporting-source-paths.md  fuse-require-extraction-and-preprocessing.md  implement-library-support.md  mach-deps-subcommand.md  mach-lsp.md  mli-support.md  modularize-makefile.md  ninja-build-backend.md  non-temp-build-directory.md  ocaml-ocamlfind-versions.md  ocamlfind-libraries.md  optimisation-do-not-copy-cmi.md  optimise-reconfiguration.md  optimize-reconfiguration.md  preprocessing-pipeline.md  reconfiguration-fixes.md  refactor-objects-args.md  refactoring-move-includes-args-to-makefile.md  remove-build-dir-option.md  remove-make-backend.md  reorganize-build.md  require-directive-syntax.md  require-extension-resolution.md  run-watch.md  separate-require-extraction-and-preprocessing.md  shebang-test.md  support-mlx.md  target-for-generating-deps-mach-mk.md  test-dep-graph-changes.md  watch-mode.md
test/: dune  env.sh  test_build.t  test_build_dir_auto.t  test_build_lib.t  test_dep_add.t  test_dep_modify.t  test_dep_remove.t  test_dep_replace.t  test_dep_transitive_add.t  test_dep_transitive_remove.t  test_deps_recur.t  test_dup_require.t  test_error_in_dep.t  test_error_in_dep.t.disabled  test_error_in_lib.t  test_error_reporting.t  test_library.t  test_library_deps.t  test_library_module_dep.t  test_library_ocamlfind.t  test_mach_dep.t  test_mach_lsp.t  test_mach_lsp_subcommand.t  test_missing_ocamlfind.t  test_mli_abstract_type.t  test_mli_add.t  test_mli_basic.t  test_mli_remove.t  test_mlx.t  test_ninja.t  test_ninja.t.disabled  test_nonexistent_lib.t  test_ocamlfind_lib.t  test_partial_reconfigure.t  test_pp.t  test_reconfigure.t  test_reconfigure_lib.t  test_run_build_command.t  test_run_watch_long_lived.t  (+9 more)
test_makefile/: env.sh
test_ninja/: dune  env.sh
website/: Makefile  index.md  markdown_toc.ml  markdown_toc.mli  page.template.html  website.ml
