opam-version: "2.0"
synopsis: "An LSP support for mach"
description: "An LSP support for mach"
maintainer: ["Andrey Popp <me@andreypopp.com>"]
authors: ["Andrey Popp <me@andreypopp.com>"]
license: "MIT"
tags: ["build-system" "lsp" "editor-integration"]
homepage: "https://github.com/andreypopp/mach"
doc: "https://github.com/andreypopp/mach"
bug-reports: "https://github.com/andreypopp/mach/issues"
depends: [
  "dune" {>= "3.20"}
  "ocaml"
  "merlin-lib"
  "mach"
  "csexp"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/andreypopp/mach.git"
x-maintenance-intent: ["(latest)"]
