opam-version: "2.0"
synopsis: "A build system for scripting with OCaml"
description: "A build system for scripting with OCaml"
maintainer: ["Andrey Popp <me@andreypopp.com>"]
authors: ["Andrey Popp <me@andreypopp.com>"]
license: "MIT"
tags: ["build-system" "scripting"]
homepage: "https://github.com/andreypopp/mach"
doc: "https://github.com/andreypopp/mach"
bug-reports: "https://github.com/andreypopp/mach/issues"
depends: [
  "ocaml"
  "cmdliner" {with-dev-setup}
  "ocaml-lsp-server" {with-dev-setup}
  "dune" {with-dev-setup}
  "mlx" {with-test | with-dev-setup}
]
build: [ ["ocamlopt.opt" "-I" "+unix" "unix.cmxa" "_dist/mach.ml" "-o" "_dist/mach" ] ]
install: [ ["opam-installer" "--prefix" prefix "mach.install"] ]
dev-repo: "git+https://github.com/andreypopp/mach.git"
x-maintenance-intent: ["(latest)"]
