(rule
 (target mach)
 (deps mach.ml)
 (action
  (run ocamlopt.opt -I +unix unix.cmxa mach.ml -o mach)))

(rule
 (target mach.ml)
 (deps
  Makefile
  ../bin/ocamlbundle
  ../bin/cat_parsetree.exe
  ../lib/mach_lib.cmxa
  (source_tree ../lib)
  (source_tree ../bin)
  (source_tree ../_opam/lib/parsexp)
  (source_tree ../_opam/lib/sexplib0)
  (source_tree ../_opam/lib/cmdliner))
 (mode promote)
 (action
  (run make mach.ml)))

(subdir
 zsh
 (subdir
  site-functions
  (rule
   (target _mach)
   (mode promote)
   (action
    (with-stdout-to
     %{target}
     (progn
      (run cmdliner tool-completion --standalone-completion zsh mach)))))))

(subdir
 man1
 (rule
  (target mach.1)
  (mode promote)
  (action
   (with-stdout-to
    %{target}
    (progn
     (run mach --help=groff)))))
 (rule
  (target mach-run.1)
  (mode promote)
  (action
   (with-stdout-to
    %{target}
    (progn
     (run mach run --help=groff)))))
 (rule
  (target mach-build.1)
  (mode promote)
  (action
   (with-stdout-to
    %{target}
    (progn
     (run mach build --help=groff))))))

(subdir
 bash-completion
 (subdir
  completions
  (rule
   (target mach)
   (mode promote)
   (action
    (with-stdout-to
     %{target}
     (progn
      (run cmdliner tool-completion --standalone-completion bash mach)))))))
